Configuracion final Docker y S3